Included debian package configuration files.

--- a/Artivity.Extension.Firefox/data/css/popup.css
+++ b/Artivity.Extension.Firefox/data/css/popup.css
@@ -1,15 +1,15 @@
 body {
  font-family: "Arial", "Helvetica", sans-serif;
  font-size: 1em;
+ width: 350px;
+ min-height: 100px;
  padding: 0 0 40px 0; /* Bottom padding ensures that the footer message does not overlap with the content. */
  margin: 0;
- background: #222;
- color: #ddd;
 }
 
 h4 {
  text-transform: uppercase;
- color: #858585;
+ color: #747474;
  font-size: 0.8em;
  font-weight: normal;
  margin: 10px 0 0 0;
@@ -30,8 +30,9 @@ h4 {
  text-align: center;
  padding: 10px;
  margin: 10px 0 20px 0;
- border: 1px solid #ffa5a5;
+ border: 1px dotted #ffa5a5;
  border-radius: 5px;
+ background: white;
 }
 
 #watermark {
@@ -39,7 +40,6 @@ h4 {
  position: absolute;
  bottom: 0;
  right: 0;
- opacity: 0.1;
 }
 
 #body {
@@ -47,24 +47,26 @@ h4 {
 }
 
 #subtitle, #footer {
- color: #858585;
+ color: #747474;
 }
 
 #settings-list {
  margin: 10px 0;
  padding: 0;
  list-style: none;
+ border-top: 1px dotted #c8c8c8;
 }
 
 #settings-list li {
  padding: 15px;
+ border-bottom: 1px dotted #c8c8c8;
 }
 
 #footer {
  position: absolute;
  bottom: 0;
- left: 10px;
+ width: 100%;
  padding: 10px 0;
  font-size: 0.8em;
- text-align: left;
+ text-align: center;
 }
