--- a/Artivity.WebUi/app/partials/file-list.html
+++ b/Artivity.WebUi/app/partials/file-list.html
@@ -1,19 +1,25 @@
-<div ng-controller="FileListController as fileList">
-	<div class="header">
-		<div class="visual img-avatar">
-			<!--<img src="{{user.Photo}}" width="40" height="40" />-->
+<div id="document" ng-controller="FileListController as fileList" class="jumbo-header">
+	<div id="header" class="row">
+		<div class="col">
+			<img class="icn icn-circle" src="{{user.PhotoUrl}}"/>
 		</div>
 
-		<h5 class="title">{{user.Name}}</h5>
+		<div class="col expand">
+			<h5 class="title title-lg">{{user.Name}}</h5>
+		</div>
+
+		<div class="col">
+			<a class="btn" href="#/settings"><i class="zmdi zmdi-hc-fw"></i></a>
+		</div>
 	</div>
 
-	<div class="body">
-		<ul class="list-view">
-			<li ng-repeat="file in files">
-				<a href="#/files/view?fileUrl={{file.FileUrl}}">
-					<div class="row list-item">
-						<div class="pull-left img-thumbnail"></div>
-						<div class="pull-left">{{file.FileName}}</div>
+	<div id="body">
+		<ul id="file-list" class="cards">
+			<li class="card" ng-repeat="file in files">
+				<a href="#/files/{{encodeBase64(file.url)}}">
+					<div>
+						<div class="img-thumbnail"></div>
+						<div class="title">{{getFileName(file.url)}}</div>
 					</div>
 				</a>
 			</li>
