--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -1,7 +1,7 @@
 <div id="document" ng-controller="FileListController as fileList" class="jumbo-header">
 	<div id="header" class="row">
 		<div class="col">
-			<img class="icn icn-circle" src="{{user.PhotoUrl}}"/>
+			<img class="icn icn-circle" src="{{userPhotoUrl}}"/>
 		</div>
 
 		<div class="col expand">
