--- a/Artivity.Apid.Modules.Journal/app/partials/file-detail.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-detail.html
@@ -16,9 +16,29 @@
 	</div>
 	<div id="body">
 		<div class="content text-center">
-			<h4 style="margin-top: 200px">{{ getFormattedDate(selectedInfluence.time) }}</h4>
-			<h3>{{ getFormattedTime(selectedInfluence.time) }}</h3>
-			<span class="label">{{ getFormattedTimeFromNow(selectedInfluence.time) }}</span>
+			<canvas id="viewport">
+			</canvas>
+			<script>
+				$(function(){
+					updateCanvas();
+					
+					window.addEventListener('resize', updateCanvas, false);
+				});
+
+				function updateCanvas()
+				{
+					var container = $('.content');
+
+					var canvas = document.getElementById("viewport");
+					canvas.height = container.innerHeight();
+					canvas.width = container.innerWidth();
+				}
+			</script>
+			<div id="viewport-overlay">
+				<h4 style="margin-top: 200px">{{ getFormattedDate(selectedInfluence.time) }}</h4>
+				<h3>{{ getFormattedTime(selectedInfluence.time) }}</h3>
+				<span class="label">{{ getFormattedTimeFromNow(selectedInfluence.time) }}</span>
+			</div>
 		</div>
 		<div class="sidebar">
 			<ul class="nav nav-tabs" id="tabs" role="tablist">
@@ -31,9 +51,7 @@
 				<div role="tabpanel" class="tab-pane fade active in" id="history">
 					<ul class="list-unstyled">
 						<li ng-repeat="influence in influences" ng-class="{selected: influence == selectedInfluence}">
-							<a title="{{influence.time}}"
-							   ng-click="selectInfluence(influence)"
-							   ng-mouseover="previewInfluence(influence)">
+							<a title="{{influence.time}}" ng-click="selectInfluence(influence)" ng-mouseover="previewInfluence(influence)">
 								<i class="zmdi zmdi-hc-fw icn icn-circle"></i> {{influence.description}}
 							</a>
 						</li>
