--- a/Artivity.Apid.Modules.Journal/app/partials/error-no-apid-connection.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/error-no-apid-connection.html
@@ -1,18 +1,8 @@
 <style type="text/css">
-	html,
-	body {
-		height: 100%; // Make the body fill the browser window.
-	}
-	
 	body {
 		font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 		color: #fff;
-		overflow: hidden;
-		min-height: 100%;
-		margin: 0;
-	}
-	
-	#body {
+        background: #343434;
 		padding: 20px;
 	}
 	
@@ -20,7 +10,7 @@
 		color: #999;
 	}
 	
-	#no-connection {
+	#body {
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 650px;
