--- a/Artivity.Apid.Modules.Journal/app/partials/error-no-apid-connection.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/error-no-apid-connection.html
@@ -15,6 +15,14 @@
 		margin-right: auto;
 		max-width: 650px;
 	}
+	
+	button {
+		padding: 10px 15px;
+		background: none;
+		border: 1px solid #fff;
+		border-radius: 3px;
+		margin-top: 2em;
+	}
 </style>
 
 <div ng-controller="ErrorController as error">
@@ -38,6 +46,8 @@
 				</div>
 
 				<p class="text-label">ERR_NO_APID_CONNECTION</p>
+
+                <button onclick="javascript:history.back()">Retry</button>
 			</div>
 		</div>
 	</div>
