--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -1,110 +1,147 @@
 <div ng-controller="FileViewController as fileView">
-	<div id="header">
-		<div class="row">
-			<div class="col">
-				<a class="btn" href="#/files"><i class="zmdi zmdi-hc-fw"></i></a>
-			</div>
+    <div id="header">
+        <div class="row">
+            <div class="col">
+                <a class="btn" href="#/files"><i class="zmdi zmdi-hc-fw"></i></a>
+            </div>
 
-			<div class="col">
-				<div class="icn" style="background-color: {{agent.ColourCode}}; width: 30px; height: 30px; position: relative; top: 10px; left: 5px;"></div>
-			</div>
+            <div class="col">
+                <div class="icn" style="background-color: {{agent.ColourCode}}; width: 30px; height: 30px; position: relative; top: 10px; left: 5px;"></div>
+            </div>
 
-			<div class="col expand">
-				<h5 class="title">{{fileName}}</h5>
-			</div>
-		</div>
-	</div>
-	<div id="body">
-		<div class="content text-center">
-			<canvas class="buffer" style="margin: 1px;"></canvas>
-			<script>
-				$(function () {
-					updateCanvas();
+            <div class="col expand">
+                <h5 class="title">{{fileName}}</h5>
+            </div>
+        </div>
+    </div>
+    <div id="body">
+        <div class="content text-center">
+            <canvas class="buffer" style="margin: 1px;"></canvas>
+            <script>
+                $(function() {
+                    updateCanvas();
 
-					window.addEventListener('resize', updateCanvas, false);
-				});
+                    window.addEventListener('resize', updateCanvas, false);
+                });
 
-				function updateCanvas() {
-					var buffer = document.getElementsByClassName("buffer")[0];
-					
-					// To prevent flickering, store the current context before setting the size.
-					var bufferContext = buffer.getContext('2d');
-					
-					// Create temp canvas and context
-					var temp = document.createElement('canvas');
-					temp.width = $('.content').innerWidth();
-					temp.height = $('.content').innerHeight();
+                function updateCanvas() {
+                    var buffer = document.getElementsByClassName("buffer")[0];
 
-					// Draw current canvas to temp canvas.
-					var tempContext = temp.getContext("2d");
-					tempContext.drawImage(bufferContext.canvas, 0, 0);
-					
-					// Now resize the canvas.					
-					buffer.width = $('.content').innerWidth();
-					buffer.height = $('.content').innerHeight();
+                    // To prevent flickering, store the current context before setting the size.
+                    var bufferContext = buffer.getContext('2d');
 
-					// Draw temp canvas back to the current canvas
-        			bufferContext.drawImage(tempContext.canvas, 0, 0);
+                    // Create temp canvas and context
+                    var temp = document.createElement('canvas');
+                    temp.width = $('.content').innerWidth();
+                    temp.height = $('.content').innerHeight();
 
-					// Update the buffer if now.
-					var scope = angular.element(buffer).scope();
+                    // Draw current canvas to temp canvas.
+                    var tempContext = temp.getContext("2d");
+                    tempContext.drawImage(bufferContext.canvas, 0, 0);
 
-					if (scope.selectedInfluence) {
-						scope.renderInfluence(scope.selectedInfluence);
-					}
-				}
-			</script>
-			<div id="viewport-overlay">
-				<h4 style="margin-top: 200px">{{ getFormattedDate(selectedInfluence.time) }}</h4>
-				<h3>{{ getFormattedTime(selectedInfluence.time) }}</h3>
-				<span class="label">{{ getFormattedTimeFromNow(selectedInfluence.time) }}</span>
-			</div>
-		</div>
-		<div class="sidebar">
-			<ul class="nav nav-tabs" id="tabs" role="tablist">
-				<li role="presentation" class="active"><a data-target="#history" role="tab" data-toggle="tab">History</a></li>
-				<li role="presentation"><a data-target="#statistics" role="tab" data-toggle="tab">Stats</a></li>
-				<li role="presentation"><a data-target="#comments" role="tab" data-toggle="tab">Comments</a></li>
-			</ul>
+                    // Now resize the canvas.					
+                    buffer.width = $('.content').innerWidth();
+                    buffer.height = $('.content').innerHeight();
 
-			<div class="tab-content">
-				<div role="tabpanel" class="tab-pane fade active in" id="history">
-					<ul class="list-unstyled">
-						<li ng-repeat="influence in influences" ng-class="{selected: influence == selectedInfluence}">
-							<a title="{{influence.time}}" ng-click="selectInfluence(influence)" ng-mouseenter="previewInfluence(influence)" style="padding: 3px;">
-								<i class="zmdi zmdi-hc-fw icn icn-circle"></i> {{influence.description}}
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div role="tabpanel" class="tab-pane fade" id="statistics">
-					<div class="under-construction"></div>
-				</div>
-				<div role="tabpanel" class="tab-pane fade" id="comments">
-					<div class="under-construction"></div>
-				</div>
-			</div>
+                    // Draw temp canvas back to the current canvas
+                    bufferContext.drawImage(tempContext.canvas, 0, 0);
 
-			<script type="text/javascript">
-				$('#tabs a').click(function (e) {
-					e.preventDefault();
-					$(this).tab('show');
-				})
-			</script>
-		</div>
-	</div>
-	<div id="footer">
-		<div class="playback-toolbar">
-			<div class="col-playback-controls">
-				<div class="center-parent">
-					<div class="btn btn-skip-prev" ng-click="skipPrev()"><i class="zmdi zmdi-hc-fw"></i></div>
-					<div class="btn btn-play" ng-click="togglePlay()"><i class="zmdi zmdi-hc-fw"></i></div>
-					<div class="btn btn-skip-next" ng-click="skipNext()"><i class="zmdi zmdi-hc-fw"></i></div>
-				</div>
-			</div>
-			<div class="col-playback-chart">
-				<div gantt-chart chart-data="activities"></div>
-			</div>
-		</div>
-	</div>
+                    // Update the buffer if now.
+                    var scope = angular.element(buffer).scope();
+
+                    if (scope.selectedInfluence) {
+                        scope.renderInfluence(scope.selectedInfluence);
+                    }
+                }
+
+            </script>
+            <div id="viewport-overlay">
+                <h4 style="margin-top: 200px">{{ getFormattedDate(selectedInfluence.time) }}</h4>
+                <h3>{{ getFormattedTime(selectedInfluence.time) }}</h3>
+                <span class="label">{{ getFormattedTimeFromNow(selectedInfluence.time) }}</span>
+            </div>
+        </div>
+        <div class="sidebar left">
+            <ul class="nav nav-tabs tablist" id="tabs" role="tablist">
+                <li role="presentation" class="active"><a data-target="#history" role="tab" data-toggle="tab">History</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade active in" id="history">
+                    <ul class="list-unstyled">
+                        <li ng-repeat="influence in influences" ng-class="{selected: influence == selectedInfluence}">
+                            <a title="{{influence.time}}" ng-click="selectInfluence(influence)" ng-mouseenter="previewInfluence(influence)" style="padding: 3px;">
+                                <i class="zmdi zmdi-hc-fw icn icn-circle"></i> {{influence.description}}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="sidebar right">
+            <ul class="nav nav-tabs tablist" id="tabs" role="tablist">
+                <li role="presentation" class="active"><a data-target="#statistics" role="tab" data-toggle="tab">Stats</a></li>
+                <li role="presentation"><a data-target="#comments" role="tab" data-toggle="tab">Comments</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade active in" id="statistics">
+                    <table style="width: 90%;">
+                        <tr>
+                            <td>
+                                <label>Confidence</label>
+                            </td>
+                            <td><span class="pull-right">{{stats.confidence}}</span></td>
+                            <td>&nbsp;%</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label>Steps</label>
+                            </td>
+                            <td><span class="pull-right">{{stats.steps}}</span></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label>Undos</label>
+                            </td>
+                            <td><span class="pull-right">{{stats.undos}}</span></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label>Redos</label>
+                            </td>
+                            <td><span class="pull-right">{{stats.redos}}</span></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
+                <div role="tabpanel" class="tab-pane fade" id="comments">
+                    <div class="under-construction"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="playback-toolbar">
+            <div class="col-playback-controls">
+                <div class="center-parent">
+                    <div class="btn btn-skip-prev" ng-click="skipPrev()"><i class="zmdi zmdi-hc-fw"></i></div>
+                    <div class="btn btn-play" ng-click="togglePlay()"><i class="zmdi zmdi-hc-fw"></i></div>
+                    <div class="btn btn-skip-next" ng-click="skipNext()"><i class="zmdi zmdi-hc-fw"></i></div>
+                </div>
+            </div>
+            <div class="col-playback-chart">
+                <div gantt-chart chart-data="activities"></div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript">
+        $('.tablist a').click(function(e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
+
+    </script>
 </div>
