--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -284,9 +284,25 @@ a:hover {
 .content {
 	position: absolute;
 	top: 0;
-	left: 300px;
-	right: 300px;
+	left: 350px;
+	right: 250px;
 	bottom: 0;
+    padding: 50px 10px 10px 10px;
+    box-sizing: content-box;
+}
+
+#canvas {
+    padding: 0;
+}
+
+#canvas-header {
+	position: absolute;
+	left: 0;
+	top: 0;
+    height: 50px;
+    width: 100%;
+    padding: 12px 30px;
+    text-align: left;
 }
 
 .sidebar.left {
@@ -294,7 +310,7 @@ a:hover {
 	top: 0;
 	left: 0;
 	bottom: 0;
-	width: 300px;
+	width: 350px;
 }
 
 .sidebar.right {
@@ -302,7 +318,7 @@ a:hover {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	width: 300px;
+	width: 250px;
 }
 
 .sidebar .tab-content {
@@ -671,18 +687,6 @@ input.form-control:focus {
 	opacity: .2;
 }
 
-#viewport, #viewport-overlay {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-}
-
-#viewport-overlay {
-	background: rgba(0,0,0,.1);
-}
-
 ::-webkit-scrollbar
 {
   width: 12px;  /* for vertical scrollbars */
@@ -691,10 +695,10 @@ input.form-control:focus {
 
 ::-webkit-scrollbar-track
 {
-  background: rgba(0, 0, 0, 0.1);
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb
 {
-  background: rgba(0, 0, 0, 0.5);
+  background: $headerBackgroundColor;
 }
