Improvements in Artivity Journal file view.

--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -161,6 +161,10 @@ a:hover {
 	border-radius: 50%;
 }
 
+.icn-transparent {
+    background: transparent;
+}
+
 .account, .ok {
 	font-size: $iconFontSize;
 	text-shadow: none;
