--- a/Artivity.Apid.Modules.Journal/app/partials/settings.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/settings.html
@@ -54,10 +54,10 @@
 						<div class="col-md-6">
 							<!-- USER -->
 							<div class="form-group">
-								<input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker/>
+								<input type="file" accept="image/*" id="photo" name="photo" ng-model="userPhoto" style="display: none;" ng-photo-picker onchange="angular.element(this).scope().onPhotoChanged(this)"/>
 
 								<button id="photo-btn" class="btn img-avatar img-avatar-lg">
-									<img src="{{userPhotoUrl}}" width="100" height="100">
+									<img id="photo-img" src="{{userPhotoUrl}}" width="100" height="100">
 								</button>
 
 								<label for="photo-btn" style="margin: 10px 0">Click to select your profile picture.</label>
