--- a/Artivity.Apid.Modules.Journal/app/partials/file-view.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-view.html
@@ -22,7 +22,7 @@
                 <label class="pull-right">{{ getFormattedTimeFromNow(selectedInfluence.time) }}</label>
             </div>
             
-            <canvas id="canvas" class="buffer" style="margin: 1px;"></canvas>
+            <canvas id="canvas" class="buffer" style="margin: 1px;" loaded="updateCanvas()"></canvas>
             
             <script>
                 $(function() {
@@ -33,6 +33,8 @@
                 });
 
                 function updateCanvas() {
+                    console.log("Updating canvas..");
+                    
                     var buffer = document.getElementsByClassName("buffer")[0];
 
                     // To prevent flickering, store the current context before setting the size.
@@ -53,12 +55,6 @@
 
                     // Update the buffer if now.
                     var scope = angular.element(buffer).scope();
-
-                    if(scope.canvas !== undefined) {
-                        console.log((buffer.width - scope.canvas.width) / 2);
-                        
-                        bufferContext.translate((buffer.width - scope.canvas.width) / 2, 0);
-                    }
                     
                     // Draw temp canvas back to the current canvas
                     bufferContext.drawImage(tempContext.canvas, 0, 0);
