Implemented recently used files query.

--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -19,7 +19,7 @@
 				<a href="#/files/view?fileUrl={{file.url}}">
 					<div>
 						<div class="img-thumbnail"></div>
-						<div class="title">{{getFileName(file.url)}}</div>
+						<div class="title">{{file.label}}</div>
 					</div>
 				</a>
 			</li>
