--- a/Artivity.Apid.Modules.Journal/app/partials/file-list.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/file-list.html
@@ -16,7 +16,7 @@
 	<div id="body">
 		<ul id="file-list" class="cards">
 			<li class="card" ng-repeat="file in files">
-				<a href="#/files/view?fileUrl={{file.url}}">
+				<a href="#/files/view?uri={{file.uri}}">
 					<div>
 						<div class="img-thumbnail"></div>
 						<div class="title">{{file.label}}</div>
