--- a/Artivity.Apid.Modules.Journal/app/partials/query.html
+++ b/Artivity.Apid.Modules.Journal/app/partials/query.html
@@ -5,32 +5,25 @@
 				<a class="btn" href="#/files"><i class="zmdi zmdi-hc-fw"></i></a>
 			</div>
 
-			<div class="col">
-				<div class="icn"></div>
-			</div>
-
 			<div class="col expand">
-				<h5 class="title">Query</h5>
+				<h5 class="title">SPARQL Query</h5>
 			</div>
 		</div>
 	</div>
 
 	<div id="body">
-		<div class="row">
-			<div class="col-xs-12">
-				<textarea ng-model="queryString" contenteditable="true" style="margin: 20px 10px; padding: 10px; background: white; color: black; width: 100%; min-height: 400px; font-family: monospace;"></textarea>
+		<form target="{{endpoint}}" method="post">
+			<div class="row">
+				<div class="col-xs-6">
+					<textarea ng-model="queryString" contenteditable="true" style="margin: 20px 10px; padding: 10px; background: white; color: black; width: 100%; height: 750px; font-family: monospace;"></textarea>
+					
+					<button ng-click="executeQuery()" class="btn" style="margin: 10px;">Execute</button>
+					<button ng-click="resetQuery()" class="btn" style="margin: 10px;">Reset</button>
+				</div>
+				<div class="col-xs-6">
+					<pre style="margin: 20px 10px; height: 750px; overflow-y: scroll;"><div id="result"></div></pre>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12">
-				<button ng-click="executeQuery()" class="btn" style="margin: 10px;">Execute</button>
-				<button ng-click="resetQuery()" class="btn" style="margin: 10px;">Reset</button>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12">
-				<div id="result"></div>
-			</div>
-		</div>
+		</form>
 	</div>
 </div>
